--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "fbjs": "0.3.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "react-mixin": "^1.1.0",
+    "when": "^3.7.2",
+    "jwt-decode": "^1.1.0",
     "request": "^2.58.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.6",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.9"
+    "xml2js": "^0.4.9",
+    "reqwest": "~2.0.4"
   },
   "devDependencies": {
     "babelify": "^6.1.3",
@@ -59,7 +63,8 @@
     "cssnano": "~3.3.1",
     "autoprefixer-core": "~6.0.1",
     "postcss-simple-vars": "~1.0.1",
-    "postcss-mixins": "~1.0.1"
+    "postcss-mixins": "~1.0.1",
+    "xhr2": "~0.1.3"
   },
   "license": "MIT"
 }
