JwT auth | yet to implement signup | signin works

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "underscore": "^1.8.3",
     "xml2js": "^0.4.9",
     "reqwest": "~2.0.4",
-    "jsonwebtoken": "~5.4.0"
+    "jsonwebtoken": "~5.4.0",
+    "cors": "~2.7.1"
   },
   "devDependencies": {
     "babelify": "^6.1.3",
