--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "alt": "^0.17.1",
     "async": "^1.4.0",
+    "lodash": "^2.4.1",
     "babel": "^5.6.23",
     "body-parser": "^1.13.2",
     "colors": "^1.1.2",
